--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,29 @@ button {
   letter-spacing: 0.02em;
   color: var(--logo-dark-txt-container);
 }
+.header-nav-link.current {
+  position: relative;
+}
+.header-nav-link::after {
+  content: '';
+  
+  position: absolute;
+  bottom: 1px;
+  left:0;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+}
+.header-nav-link.current {
+  color: var(--okean-active-btn);
+}
+
+.header-nav-link.current::after {
+  background-color: var(--okean-active-btn);
+}
+
 .header-contact {
   font-family: var(--primary-font);
   font-weight: 400;
@@ -502,4 +525,58 @@ button {
 .icon-item:focus {
   border-color: #404bbf;
   color: #404bbf;
+}
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+ 
+
+  width: 100%;
+  height: 100%;
+
+  background-color:  rgba(46, 47, 66, 0.4);
+  
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+  opacity: 1;
+
+  width: 408px;
+  height: 576px;
+  padding: 24px;
+
+  background: #FCFCFC;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+}
+.modal-btn {
+  position: absolute;
+  margin-left: auto;
+  top: 24px;
+  right: 24px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  
+  background-color: #E7E9FC;
+border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border: none;
+
+  cursor: pointer;
 }
