--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@
   --icon: #8e8f99;
   --modal-window: #fcfcfc;
   --green-btn: #31d0aa;
-  --cubic: cubic-bezier(0.4, 0, 0.2, 1);
-  --anim-slow: 250ms;
+  --cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 .body {
@@ -91,7 +91,7 @@ button {
   height: 56px;
   border: none;
   border-radius: 4px;
-  transition: transform 250ms var(--cubic);
+  transition: background-color var(--cubic);
 }
 .btn:hover,
 .btn:focus {
@@ -110,7 +110,7 @@ button {
   cursor: pointer;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
-  transition: transform 250ms var(--cubic);
+  transition: background-color var(--cubic), color var(--cubic), box-shadow var(--cubic), border var(--cubic);
 }
 .bth-portfolio:focus,
 .bth-portfolio:hover {
@@ -236,7 +236,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--logo-dark-txt-container);
-  transition: transform 250ms var(--cubic);
+  transition: color var(--cubic);
 }
 .header-nav-link.current {
   position: relative;
@@ -269,7 +269,7 @@ button {
   letter-spacing: 0.02em;
   color: var(--main-txt-cl);
   font-style: normal;
-  transition: transform 250ms var(--cubic);
+  transition: color var(--cubic);
 }
 
 .header-link:hover,
@@ -430,7 +430,7 @@ button {
   height: 40px;
   border-radius: 50%;
   background-color: var(--accent-txt-cl);
-  transition: transform 250ms var(--cubic);
+  transition: background-color var(--cubic);
 }
 .social-link:hover,
 .social-link:focus {
@@ -444,7 +444,7 @@ button {
   height: 40px;
   border-radius: 50%;
   background-color: var(--accent-txt-cl);
-  transition-property: background-color, fill;
+  transition: background-color var(--cubic);
 }
 .social-link-footer:hover,
 .social-link-footer:focus {
@@ -548,7 +548,7 @@ button {
   color: var(--icon);
   width: 168px;
   height: 88px;
-  transition: transform 250ms var(--cubic);
+  transition: border-color var(--cubic), color var(--cubic), fill var(--cubic);
 }
 .icon-item:hover,
 .icon-item:focus {
@@ -629,7 +629,7 @@ button {
   border: none;
 
   cursor: pointer;
-  transition: transform 250ms var(--cubic);
+  transition: background-color var(--cubic);
 }
 
 .modal-icon {
