--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@
   --modal-window: #fcfcfc;
   --green-btn: #31d0aa;
   --cubic: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 
 .body {
@@ -110,7 +109,8 @@ button {
   cursor: pointer;
   border: 1px solid #e7e9fc;
   border-radius: 4px;
-  transition: background-color var(--cubic), color var(--cubic), box-shadow var(--cubic), border var(--cubic);
+  transition: background-color var(--cubic), color var(--cubic),
+    box-shadow var(--cubic), border var(--cubic);
 }
 .bth-portfolio:focus,
 .bth-portfolio:hover {
